# GeneralizeX

./: .gitignore  README.md  eval_sac.sh  pyproject.toml  requirements.txt  train_baseline.py
genx/: __init__.py
genx/environments/: __init__.py  lift.py  pick_and_place.py  pick_place.py
scripts/: config.py  eval.py  eval_maps.py  eval_sac.py  generate_dataset.py  learn_maps.py  plot.py  plot_results.py  test_dataset.py  train.py
scripts/utils/: callback.py  check_env.py  dataset_wrappers.py  loss_function.py  models.py  parser.py  torch_utils.py  util.py  wrapper.py
shell_scripts/: eval.sh  fix_torch.sh  train.sh
utils/: callback.py  util.py
