[project]
name = "genx"
version = "0.0.1"
description = "GeneralizeX"
readme = "README.md"
# license = {file = "LICENSE.txt"}
requires-python=">=3.9,<3.12"

dependencies = [
    "gymnasium",
    "robosuite",
    "termcolor",
    "torch",
    "tensorboard",
    "stable_baselines3",
    "scikit-learn",
    "geomloss",
]

[tool.setuptools.packages.find]
exclude = ["experiments*", "results*", "shell_scripts*", "scripts*"]